--- a/etcdapp/templates/etcd_index.html
+++ b/etcdapp/templates/etcd_index.html
@@ -1,12 +1,12 @@
 {% extends "bootstrap/base.html" %}
-{% block title %}Docklr{% endblock %}
+{% block title %}Docklr -- etcd{% endblock %}
 {% block head %}
 {{super()}}
 {% endblock %}
 {% block styles %}
 {{super()}}
 <link rel="stylesheet"
-      href="{{url_for('.static', filename='docklr.css')}}">
+      href="{{url_for('static', filename='docklr.css')}}">
 {% endblock %}
 {% block navbar %}
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -23,8 +23,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="/etcd">etcd</a></li>
+                <li><a href="/">Home</a></li>
+                <li class="active"><a href="/etcd">etcd</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -40,7 +40,7 @@
 <div class="container">
 
     <div class="starter-template">
-        <h1>Docklr Start Template</h1>
+        <h1>Docklr etcd Start Template</h1>
 
         <p class="lead">Its not much but is a start for things to come....</p>
     </div>
