--- a/docklrapp/templates/index.html
+++ b/docklrapp/templates/index.html
@@ -1,75 +1,116 @@
 {% extends "bootstrap/base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
 {% block title %}Docklr{% endblock %}
 {% block head %}
-{{super()}}
+    {{ super() }}
 {% endblock %}
 {% block styles %}
-{{super()}}
-<link rel="stylesheet"
-      href="{{url_for('.static', filename='docklr.css')}}">
+    {{ super() }}
+    <link rel="stylesheet"
+          href="{{ url_for('.static', filename='docklr.css') }}">
 {% endblock %}
 {% block navbar %}
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Docklr</a>
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                        aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Docklr</a>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="/etcd">etcd</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="/etcd">etcd</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </div>
-        <!--/.nav-collapse -->
-    </div>
-</nav>
+    </nav>
 {% endblock %}
 
 {% block content %}
 
-<div class="container">
-    <div class="starter-template">
-        <h1>Docklr Home</h1>
+    <div class="container">
+        <div class="starter-template">
+            <h1>Docklr Home</h1>
 
-        <p class="lead">Its not much but is a start for things to come....</p>
-    </div>
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h3 class="panel-title">Choose Cluster Config:</h3>
+            <p class="lead">Its not much but is a start for things to come....</p>
         </div>
-        <div class="panel-body">
-            <div class="form">
-                <div class="form-group">
-                    <select class="form-control">
-                        {% for profile in configs%}
-                        <option value="{{ profile.id }}">{{ profile.cluster_name}}</option>
-                        {% endfor %}
-                    </select>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Choose Cluster Config:</h3>
+            </div>
+            <div class="panel-body">
+                <div class="form">
+                    <div class="form-group">
+                        <select id="cluster-select" class="form-control">
+                            {% for profile in configs %}
+                                <option value="{{ profile.id }}">{{ profile.cluster_name }}</option>
+                            {% endfor %}
+                        </select>
 
-                </div>
-                <div class="form-group">
-                    <button class="btn btn-primary btn-xs" type="button">Add</button>
+                    </div>
+                    <div class="form-group">
+                        <a href="#" class="btn btn-xs btn-primary"
+                           data-toggle="modal"
+                           data-target="#basicModal">Add Cluster Config</a>
+                    </div>
                 </div>
             </div>
+
         </div>
+        <div id="test"/>
 
     </div>
-</div>
-<!-- /.container -->
+    {% include "frm-addconfig.html" %}
+    <!-- /.container -->
 
-<footer class="footer">
-    <div class="container">
-        <p class="text-muted">&copy; 2014 Docklr</p>
-    </div>
-</footer>
+    <footer class="footer">
+        <div class="container">
+            <p class="text-muted">&copy; 2014 Docklr</p>
+        </div>
+    </footer>
+{% endblock %}
+
+{% block scripts %}
+    {{ super() }}
+    <script>
+        var options = {
+            "backdrop": "false"
+        };
+
+        $(document).ready(function () {
+            $("#add-config-btn").click(function (event) {
+                $('#basicModal').modal(options);
+            });
+            $('#frm-cluster-submit-btn').click(function () {
+                $.ajax({
+                    url: '/clusterconfig',
+                    type: 'post',
+                    dataType: 'json',
+                    data: $('#clusterinfo').serialize(),
+                    success: function (data) {
+
+                    }
+                });
+            });
+            {% block formscripts %} {% endblock %}
+        });
+        $("#cluster-select").change(function () {
+            var url = "clusterinfo/" + $("#cluster-select").val();
+            $.getJSON(url, function (data) {
+                var elem =  JSON.stringify(data) 
+                $("#test").text(elem)
+            });
+        })
+
+    </script>
 {% endblock %}
