got the nodes lined up (mockup for now)

--- a/docklrapp/templates/index.html
+++ b/docklrapp/templates/index.html
@@ -76,6 +76,106 @@
             </div>
 
         </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Cluster:</h3>
+            </div>
+            <div class="panel-body">
+                <div class="well">
+                    <div class="container-fluid">
+                        <div class="row">
+
+                            <div class="col-sm-1 col-md-3">
+                                <div class="thumbnail d-node">
+                                    <img class="node" src="{{ url_for('static',filename='node-up-xsm.png') }}"
+                                         alt="...">
+
+                                    <div class="caption">
+                                        <h3>Node Up</h3>
+
+                                        <p>...</p>
+
+                                        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#"
+                                                                                                           class="btn btn-default"
+                                                                                                           role="button">Button</a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-1 col-md-3">
+                                <div class="thumbnail d-node">
+                                    <img class="node" src="{{ url_for('static',filename='node-down-xsm.png') }}"
+                                         alt="...">
+
+                                    <div class="caption">
+                                        <h3>Node Down</h3>
+
+                                        <p>...</p>
+
+                                        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#"
+                                                                                                           class="btn btn-default"
+                                                                                                           role="button">Button</a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-1 col-md-3">
+                                <div class="thumbnail d-node">
+                                    <img class="node" src="{{ url_for('static',filename='node-master-xsm.png') }}"
+                                         alt="...">
+
+                                    <div class="caption">
+                                        <h3>Node Master</h3>
+
+                                        <p>...</p>
+
+                                        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#"
+                                                                                                           class="btn btn-default"
+                                                                                                           role="button">Button</a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-1 col-md-3">
+                                <div class="thumbnail d-node">
+                                    <img class="node" src="{{ url_for('static',filename='node-down-xsm.png') }}"
+                                         alt="...">
+
+                                    <div class="caption">
+                                        <h3>Node Down</h3>
+
+                                        <p>...</p>
+
+                                        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#"
+                                                                                                           class="btn btn-default"
+                                                                                                           role="button">Button</a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-1 col-md-3">
+                                <div class="thumbnail d-node">
+                                    <img class="node" src="{{ url_for('static',filename='node-down-xsm.png') }}"
+                                         alt="...">
+
+                                    <div class="caption">
+                                        <h3>Node Down</h3>
+
+                                        <p>...</p>
+
+                                        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#"
+                                                                                                           class="btn btn-default"
+                                                                                                           role="button">Button</a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
 
 
     </div>
