--- a/docklrapp/templates/index.html
+++ b/docklrapp/templates/index.html
@@ -78,6 +78,7 @@
         </div>
         <div class="panel panel-default">
             <div class="panel-heading">
+                <button type="button"  class="right" aria-hidden="true"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
                 <h3 class="panel-title" name="cluster">Cluster:</h3>
             </div>
             <div class="panel-body">
