--- a/docklrapp/templates/index.html
+++ b/docklrapp/templates/index.html
@@ -78,7 +78,8 @@
         </div>
         <div class="panel panel-default">
             <div class="panel-heading">
-                <button type="button"  class="right" aria-hidden="true"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+                <button type="button" id="cluster-refresh" class="right" aria-hidden="true"><span
+                        class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
                 <h3 class="panel-title" name="cluster">Cluster:</h3>
             </div>
             <div class="panel-body">
@@ -109,6 +110,17 @@
             "backdrop": "false"
         };
 
+        function loadClusterInfo() {
+            var url = "clusterinfo/" + $("#cluster-select").val();
+            var clurl = 'clusterlayout/' + $("#cluster-select").val();
+            $.getJSON(url, function (data) {
+                var elem = JSON.stringify(data)
+                $("#test").text(elem)
+            });
+            $("#clusterlayout").load(clurl);
+
+        }
+
         $(document).ready(function () {
             $("#add-config-btn").click(function (event) {
                 $('#basicModal').modal(options);
@@ -127,14 +139,10 @@
             {% block formscripts %} {% endblock %}
         });
         $("#cluster-select").change(function () {
-            var url = "clusterinfo/" + $("#cluster-select").val();
-            var clurl = 'clusterlayout/' + $("#cluster-select").val();
-            $.getJSON(url, function (data) {
-                var elem = JSON.stringify(data)
-                $("#test").text(elem)
-            });
-            $("#clusterlayout").load(clurl);
-
+            loadClusterInfo()
+        });
+        $("#cluster-refresh").click(function() {
+            loadClusterInfo()
         });
         $(document).on('click', ".dr-remove-node", function (event) {
             var n = $(this).attr("node");
