--- a/docklrapp/templates/index.html
+++ b/docklrapp/templates/index.html
@@ -8,6 +8,8 @@
     {{ super() }}
     <link rel="stylesheet"
           href="{{ url_for('.static', filename='docklr.css') }}">
+    <link rel="stylesheet"
+          href="{{ url_for('.static', filename='docklr 2.css') }}">
 {% endblock %}
 {% block navbar %}
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -78,6 +80,8 @@
         </div>
         <div class="panel panel-default">
             <div class="panel-heading">
+                <button type="button" id="cluster-detail" class="right" aria-hidden="true"><span
+                        class="icon-node-detail" aria-hidden="true"></span></button>
                 <button type="button" id="cluster-refresh" class="right" aria-hidden="true"><span
                         class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
                 <h3 class="panel-title" name="cluster">Cluster:</h3>
