--- a/static/docklr.css
+++ b/static/docklr.css
@@ -60,7 +60,7 @@ body {
     color: #000;
     text-shadow: 0 1px 0 #fff;
     filter: alpha(opacity=50);
-    opacity: .5
+    opacity: .5;
 }
 
 .right:hover, .right:focus {
