--- a/docklrapp/templates/index.html
+++ b/docklrapp/templates/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet"
           href="{{ url_for('.static', filename='docklr.css') }}">
     <link rel="stylesheet"
-          href="{{ url_for('.static', filename='docklr 2.css') }}">
+          href="{{ url_for('.static', filename='docklrico.css') }}">
 {% endblock %}
 {% block navbar %}
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
