--- a/static/docklr.css
+++ b/static/docklr.css
@@ -61,6 +61,7 @@ body {
     text-shadow: 0 1px 0 #fff;
     filter: alpha(opacity=50);
     opacity: .5;
+    margin-left: 10px;
 }
 
 .right:hover, .right:focus {
