Adding new configs to select

--- a/docklrapp/templates/frm-newconfig.html
+++ b/docklrapp/templates/frm-newconfig.html
@@ -1,19 +1,19 @@
 {% import "bootstrap/wtf.html" as wtf %}
-<div class="modal fade" id="AddConfigModal" tabindex="-1" role="dialog" aria-labelledby="AddConfigModal"
+<div class="modal fade" id="NewDiscoveryModal" tabindex="-1" role="dialog" aria-labelledby="basicModal"
      aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <h4 class="modal-title" id="myModalLabel">Add new Cluster Config</h4>
+                <h4 class="modal-title" id="myModalLabel">Create New Cluster Discovery Record</h4>
             </div>
             <div class="modal-body">
                 <h4>Please enter Cluster information</h4>
-                {{ wtf.quick_form(addconfigform,id="clusterinfo",action="/addclusterconfig",method="post") }}
+                {{ wtf.quick_form(newclusterform,id="newclusteconfig",action="/newclusterconfig",method="post") }}
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button id ="frm-addcluster-submit-btn" type="button" class="btn btn-primary">Save changes</button>
+                <button id ="frm-cluster-submit-btn" type="button" class="btn btn-primary">Create New Config</button>
             </div>
         </div>
     </div>
